[package]
authors = ["Ian Henderson <ianhenderson@pm.me>"]
description = "A command-line program to make your mouse wander. ;)"
edition = "2021"
keywords = ["cli", "terminal", "utility", "rust", "cross-platform"]
license = "MIT"
name = "afk"
repository = "https://github.com/ian-henderson/afk.rs"
version = "0.1.11"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
rand = "0.8.4"
structopt = "0.3.25"
